# GH-TrailSense-multilateration-library

./: .gitignore  CMakeLists.txt  GETTING-STARTED.md  INTEGRATING.md  README.md
cli/: main.c
examples/: run.sh  sample-input.json  sample-output.json
include/: trailsense_triangulate.h
src/: correlate.c  enu.c  internal.h  multilaterate.c  pathloss.c  solve.c  triangulate.c
test/: cli_golden.cmake  fixtures.gen.h  parity_test.c
test/fixtures/: bilaterate.json  compute_weight.json  correlate.json  ellipse.json  enu.json  manifest.json  multilaterate.json  pathloss.json  solve.json  triangulate.json
